fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -35,5 +35,5 @@ input{
     margin-top: 5px;
     border-radius: 3px;
     overflow-x: scroll;
-
+    white-space: pre;
 }
